// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches NavbarLink brand 1`] = `
.c1 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
  color: #0056b3;
}

.c0 {
  display: inline-block;
  padding-top: 0.3125rem;
  padding-bottom: 0.3125rem;
  font-size: 1.25rem;
  line-height: inherit;
  white-space: nowrap;
}

<a
  className="c0 c1 sc-bdVaJa eRiqeT"
/>
`;

exports[`Styles matches NavbarLink dark active 1`] = `
.c1 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
  color: #495057;
  background-color: #fff;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
  color: #0056b3;
}

.c0 {
  color: rgba(255,255,255,0.9);
}

.c0:hover,
.c0:focus {
  color: rgba(255,255,255,0.9);
}

<a
  className="c0 c1 sc-bdVaJa eRiqeT"
/>
`;

exports[`Styles matches NavbarLink dark disabled 1`] = `
.c1 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
  color: #6c757d;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
  color: #0056b3;
}

.c1:hover,
.c1:focus {
  color: #6c757d;
}

.c0 {
  color: rgba(255,255,255,0.25);
}

.c0:hover,
.c0:focus {
  color: rgba(255,255,255,0.25);
}

<a
  className="c0 c1 sc-bdVaJa eRiqeT"
  disabled={true}
/>
`;

exports[`Styles matches NavbarLink dark disabled 2`] = `
.c1 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
  color: #0056b3;
}

.c0 {
  color: rgba(255,255,255,0.5);
}

.c0:hover,
.c0:focus {
  color: rgba(255,255,255,0.75);
}

<a
  className="c0 c1 sc-bdVaJa eRiqeT"
/>
`;

exports[`Styles matches NavbarLink light active 1`] = `
.c1 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
  color: #495057;
  background-color: #fff;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
  color: #0056b3;
}

.c0 {
  color: rgba(0,0,0,0.9);
}

.c0:hover,
.c0:focus {
  color: rgba(0,0,0,0.9);
}

<a
  className="c0 c1 sc-bdVaJa eRiqeT"
/>
`;

exports[`Styles matches NavbarLink light disabled 1`] = `
.c1 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
  color: #6c757d;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
  color: #0056b3;
}

.c1:hover,
.c1:focus {
  color: #6c757d;
}

.c0 {
  color: rgba(0,0,0,0.3);
}

.c0:hover,
.c0:focus {
  color: rgba(0,0,0,0.3);
}

<a
  className="c0 c1 sc-bdVaJa eRiqeT"
  disabled={true}
/>
`;

exports[`Styles matches NavbarLink light disabled 2`] = `
.c1 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #007bff;
}

.c1:hover,
.c1:focus {
  text-decoration: none;
  color: #0056b3;
}

.c0 {
  color: rgba(0,0,0,0.5);
}

.c0:hover,
.c0:focus {
  color: rgba(0,0,0,0.7);
}

<a
  className="c0 c1 sc-bdVaJa eRiqeT"
/>
`;
